--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/dist/css/style.css" />
+    <link rel="stylesheet" href="dist/css/style.css" />
 
     <title>Frontend Mentor | Easybank landing page</title>
   </head>
