--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="overlay onm"></div>
       <nav class="flex flex-jc-sb flex-ai-c containerr containerr--pa">
         <a href="/" class="header__logo">
-          <img src="/images/logo.svg" alt="Easybank" />
+          <img src="./images/logo.svg" alt="Easybank" />
         </a>
 
         <a id="btnHam" href="#" class="header__toggle hide-for-desktop">
@@ -76,7 +76,7 @@
         <div class="features__grid">
           <div class="features__item">
             <div class="features__icon">
-              <img src="/images/icon-online.svg" alt="" srcset="" />
+              <img src="./images/icon-online.svg" alt="" srcset="" />
             </div>
             <div class="features__title">Online Banking</div>
             <div class="features__description">
@@ -86,7 +86,7 @@
           </div>
           <div class="features__item">
             <div class="features__icon">
-              <img src="/images/icon-budgeting.svg" alt="" srcset="" />
+              <img src="./images/icon-budgeting.svg" alt="" srcset="" />
             </div>
             <div class="features__title">Simple Budgeting</div>
             <div class="features__description">
@@ -96,7 +96,7 @@
           </div>
           <div class="features__item">
             <div class="features__icon">
-              <img src="/images/icon-onboarding.svg" alt="" srcset="" />
+              <img src="./images/icon-onboarding.svg" alt="" srcset="" />
             </div>
             <div class="features__title">Fast Onboarding</div>
             <div class="features__description">
@@ -106,7 +106,7 @@
           </div>
           <div class="features__item">
             <div class="features__icon">
-              <img src="/images/icon-api.svg" alt="" srcset="" />
+              <img src="./images/icon-api.svg" alt="" srcset="" />
             </div>
             <div class="features__title">Open API</div>
             <div class="features__description">
@@ -183,7 +183,7 @@
     <footer class="footer">
       <div class="containerr">
         <a href="#" class="footer__logo">
-          <img src="/images/logo-dark.svg" alt="" />
+          <img src="./images/logo-dark.svg" alt="" />
         </a>
         <div class="footer__social">
           <a href="#">
